@@ -1,6 +1,7 @@
 debbugs (2.6.1) unstable; urgency=medium
 
   * Add support for a Done: psuedoheader (closes: #950133)
+  * Fix unescaped From (closes: #983847)
 
  -- Don Armstrong <don@debian.org>  Fri, 09 Mar 2018 11:17:10 -0800
 
